--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <h1>Farai Rwambiwa | WDD 130</h1>
-        <img src="images/profile.png" alt="Hello, my name is Farai Dale" width="200">
+        <img src="images/profile.png" alt="Hello, my name is Farai Rwambiwa" width="200">
         <p>Hello! My name is Farai Rwambiwa. I’m a software development student at BYU-I, and I
             enjoy
             creative coding projects, building text-based games, and exploring web design ideas. I’m
