--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Farai Rwambiwa">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="HTML Layout Logo" width="128" height="128">
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="https://byui.edu">BYU-Idaho</a></li>
+            <li><a href="https://churchofjesuschrist.org">The Church</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Basic HTML Structure</h1>
+
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Molestiae, illum.</p>
+        </section>
+
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Molestiae, illum.</p>
+        </section>
+    </main>
+
+    <aside>
+        <img
+          src="https://www.churchofjesuschrist.org/imgs/0bae90c7bf31184e56e261bfa5d7a35788344e53/full/640%2C/0/default.jpg"
+          alt="Temple Image" width="200">
+    </aside>
+
+    <footer>
+        <p>Farai Rwambiwa</p>
+    </footer>
 </body>
+
 </html>
