--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Farai Rwambiwa | WDD 130</title>
+    <meta name="description"
+      content="This is my WDD130 course home page where I share projects and assignments.">
+    <meta name="author" content="Farai Rwambiwa">
+
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 
 <body>
@@ -22,6 +28,16 @@
             creative coding projects, building text-based games, and exploring web design ideas. I’m
             excited to learn more about HTML and web development in this course!</p>
     </main>
+
+    <aside>
+        <h2>Zimbabwe</h2>
+        <img src="images/zimbabwe.jpg" alt="Zimbabwe landscape">
+        <p>Zimbabwe is a country in Southern Africa known for its diverse wildlife, Victoria Falls,
+            and
+            rich cultural heritage.</p>
+    </aside>
+
+
     <footer>
         <p>&copy;2026 🌍 Farai Rwambiwa 🌍 Zimbabwe</p>
     </footer>
