W03 Code-along: Added temple list, box class, floated image, overlay heading, nav links

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+            <a href="https://facebook.com" target="_blank">Facebook</a>
         </nav>
     </header>
+
     <main>
         <h1>Farai Rwambiwa | WDD 130</h1>
         <img src="images/profile.png" alt="Hello, my name is Farai Rwambiwa" width="200">
@@ -27,14 +30,24 @@
             enjoy
             creative coding projects, building text-based games, and exploring web design ideas. I’m
             excited to learn more about HTML and web development in this course!</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/abidjan-ivory-coast-temple?lang=eng"
+                  target="_blank">Abidjan Ivory Coast Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/harare-zimbabwe-temple?lang=eng"
+                  target="_blank">Harare Zimbabwe Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/johannesburg-south-africa-temple?lang=eng"
+                  target="_blank">Johannesburg South Africa Temple</a></li>
+        </ul>
+
+
     </main>
 
-    <aside>
+    <aside class="box">
         <h2>Zimbabwe</h2>
         <img src="images/zimbabwe.jpg" alt="Zimbabwe landscape">
-        <p>Zimbabwe is a country in Southern Africa known for its diverse wildlife, Victoria Falls,
-            and
-            rich cultural heritage.</p>
+        <p>Zimbabwe is a country in Southern Africa known for Victoria Falls, diverse wildlife, and
+            rich
+            culture.</p>
     </aside>
 
 
