--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="About Us page for White Water Rafting Adventures">
-    <meta name="author" content="Farai Rwambiwa">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Company - About Us</title>
+    <title>Exciting Expeditions - About Us</title>
+    <meta name="description"
+      content="Learn about Exciting Expeditions, our history, and the thrilling rafting adventures we offer.">
+    <meta name="author" content="Farai Rwambiwa">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
@@ -14,12 +15,10 @@
     <header>
         <img src="images/logo.png" alt="Rafting Company Logo">
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
+            <a href="../index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
 
@@ -29,25 +28,27 @@
             <h1>Exciting Expeditions</h1>
             <article>
                 <img src="images/happy-client.jpg" alt="Happy Client">
-                <p>Our mission is to bring adventure, teamwork, and unforgettable experiences to
-                    every rafting trip.</p>
+                <p>We love seeing our clients smile after an unforgettable rafting adventure!</p>
             </article>
         </div>
 
         <section>
             <h2>History</h2>
-            <p>Exciting Expeditions was founded in 1995 by a group of adventure enthusiasts who
-                wanted to share their love for the great outdoors.</p>
+            <p>Exciting Expeditions began with a passion for rivers and adventure. Over the years,
+                we have grown into a trusted rafting company, offering safe and thrilling
+                experiences for adventurers of all ages.</p>
         </section>
 
         <section>
             <h2>Adventure Awaits You!</h2>
-            <!-- Images will be added in Week 04 -->
+            <p>Join us for an unforgettable journey down roaring rapids and scenic waterways.
+                Whether you’re a beginner or an experienced rafter, we have the perfect adventure
+                waiting for you.</p>
         </section>
     </main>
 
     <footer>
-        <p>©2026 Exciting Expeditions | Farai Rwambiwa</p>
+        <p>&copy; 2026 Exciting Expeditions | Farai Rwambiwa</p>
         <nav class="socialmedia">
             <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook Icon"></a>
             <a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn Icon"></a>
