--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exciting Expeditions - About Us</title>
     <meta name="description"
-      content="Learn about Exciting Expeditions, our history, and the thrilling rafting adventures we offer.">
+      content="Discover the story of Exciting Expeditions, our rafting history, and the thrilling adventures that await you on the river.">
+
     <meta name="author" content="Farai Rwambiwa">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
