feat: update rafting about.html and rafting.css for W04 project
- Implemented grid layout in header (logo + nav side by side)
- Applied flexbox to nav for horizontal link alignment
- Expanded History section with additional content
- Added Adventures section with 5 figure elements and captions
- Styled adventures with flex for horizontal layout
- Updated footer to align social media icons horizontally to the right
- Ensured color contrast compliance and audit readiness

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,12 +7,12 @@
     <title>Exciting Expeditions - About Us</title>
     <meta name="description"
       content="Discover the story of Exciting Expeditions, our rafting history, and the thrilling adventures that await you on the river.">
-
     <meta name="author" content="Farai Rwambiwa">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
+    <!-- Header with Grid -->
     <header>
         <img src="images/logo.png" alt="Rafting Company Logo">
         <nav>
@@ -21,10 +21,10 @@
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
         </nav>
-
     </header>
 
     <main>
+        <!-- Hero Section -->
         <div class="hero">
             <img src="images/hero.jpg" alt="Rafting Adventure">
             <h1>Exciting Expeditions</h1>
@@ -34,29 +34,53 @@
             </article>
         </div>
 
-        <section>
+        <!-- History Section -->
+        <section class="history">
             <h2>History</h2>
             <p>Exciting Expeditions began with a passion for rivers and adventure. Over the years,
                 we have grown into a trusted rafting company, offering safe and thrilling
                 experiences for adventurers of all ages.</p>
+            <p>Our guides are seasoned experts who know the rivers inside and out, ensuring every
+                trip
+                is both exciting and safe. We’ve built a legacy of adventure, teamwork, and
+                unforgettable memories.</p>
         </section>
 
-        <section>
+        <!-- Adventures Section -->
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <p>Join us for an unforgettable journey down roaring rapids and scenic waterways.
-                Whether you’re a beginner or an experienced rafter, we have the perfect adventure
-                waiting for you.</p>
+            <figure>
+                <img src="images/adventure1.jpg" alt="Los Dientes del Diablo">
+                <figcaption>Los Dientes del Diablo</figcaption>
+            </figure>
+            <figure>
+                <img src="images/adventure2.jpg" alt="Big Mallard">
+                <figcaption>Big Mallard</figcaption>
+            </figure>
+            <figure>
+                <img src="images/adventure3.jpg" alt="Half Day Adventure">
+                <figcaption>Half Day Adventure</figcaption>
+            </figure>
+            <figure>
+                <img src="images/adventure4.jpg" alt="Sunset Rapids">
+                <figcaption>Sunset Rapids</figcaption>
+            </figure>
+            <figure>
+                <img src="images/adventure5.jpg" alt="Wild River Run">
+                <figcaption>Wild River Run</figcaption>
+            </figure>
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
         <p>&copy; 2026 Exciting Expeditions | Farai Rwambiwa</p>
-        <nav class="socialmedia">
+        <div class="socialmedia">
             <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook Icon"></a>
             <a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn Icon"></a>
             <a href="https://instagram.com"><img src="images/instagram.svg"
                   alt="Instagram Icon"></a>
-        </nav>
+        </div>
     </footer>
 </body>
 
