--- a/wwr/about.html
+++ b/wwr/about.html
@@ -74,14 +74,13 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2026 Exciting Expeditions | Farai Rwambiwa</p>
-        <div class="socialmedia">
-            <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook Icon"></a>
-            <a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn Icon"></a>
-            <a href="https://instagram.com"><img src="images/instagram.svg"
-                  alt="Instagram Icon"></a>
-        </div>
-    </footer>
+  <p>&copy; 2026 Exciting Expeditions | Farai Rwambiwa</p>
+  <nav class="socialmedia">
+    <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook Icon"></a>
+    <a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn Icon"></a>
+    <a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram Icon"></a>
+  </nav>
+</footer>
 </body>
 
 </html>
