--- a/wwr/about.html
+++ b/wwr/about.html
@@ -48,28 +48,30 @@
 
         <!-- Adventures Section -->
         <section class="adventures">
-            <h2>Adventure Awaits You!</h2>
-            <figure>
-                <img src="images/adventure1.jpg" alt="Los Dientes del Diablo">
-                <figcaption>Los Dientes del Diablo</figcaption>
-            </figure>
-            <figure>
-                <img src="images/adventure2.jpg" alt="Big Mallard">
-                <figcaption>Big Mallard</figcaption>
-            </figure>
-            <figure>
-                <img src="images/adventure3.jpg" alt="Half Day Adventure">
-                <figcaption>Half Day Adventure</figcaption>
-            </figure>
-            <figure>
-                <img src="images/adventure4.jpg" alt="Sunset Rapids">
-                <figcaption>Sunset Rapids</figcaption>
-            </figure>
-            <figure>
-                <img src="images/adventure5.jpg" alt="Wild River Run">
-                <figcaption>Wild River Run</figcaption>
-            </figure>
-        </section>
+  <h2>Adventure Awaits You!</h2>
+  <div class="adventure-gallery">
+    <figure>
+      <img src="images/adventure1.jpg" alt="Los Dientes del Diablo">
+      <figcaption>Los Dientes del Diablo</figcaption>
+    </figure>
+    <figure>
+      <img src="images/adventure2.jpg" alt="Big Mallard">
+      <figcaption>Big Mallard</figcaption>
+    </figure>
+    <figure>
+      <img src="images/adventure3.jpg" alt="Half Day Adventure">
+      <figcaption>Half Day Adventure</figcaption>
+    </figure>
+    <figure>
+      <img src="images/adventure4.jpg" alt="Sunset Rapids">
+      <figcaption>Sunset Rapids</figcaption>
+    </figure>
+    <figure>
+      <img src="images/adventure5.jpg" alt="Wild River Run">
+      <figcaption>Wild River Run</figcaption>
+    </figure>
+  </div>
+</section>
     </main>
 
     <!-- Footer -->
