--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,86 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exciting Expeditions | Contact Us</title>
-  <meta name="description" content="Contact Exciting Expeditions for rafting reservations, general inquiries, or website suggestions.">
-  <link rel="stylesheet" href="styles/rafting.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exciting Expeditions - Contact Us</title>
+    <meta name="description"
+      content="Contact Exciting Expeditions for rafting reservations, general inquiries, or website suggestions.">
+    <meta name="author" content="Farai Rwambiwa">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
+
 <body>
-  <header>
-    <img src="images/logo.png" alt="Exciting Expeditions Logo">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="trips.html">Trips</a>
-      <a href="contact.html">Contact Us</a>
-    </nav>
-  </header>
+    <!-- Header -->
+    <header>
+        <img src="images/logo.png" alt="Exciting Expeditions Logo">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
+        </nav>
+    </header>
 
-  <main>
-    <h1>Contact Us</h1>
+    <main>
+        <h1>Exciting Expeditions - Contact Us</h1>
 
-    <!-- Company Info -->
-    <section class="company-info">
-      <h2>White Water Rafting Company</h2>
-      <p>123 Main River Street<br>Kolob, California</p>
-      <p>Phone: +1 999 999 9999</p>
-      <p>Email: info@whitewater.com</p>
-      <iframe src="https://www.google.com/maps/embed?..."></iframe>
-    </section>
+        <!-- Company Info -->
+        <section class="company-info">
+            <h2>White Water Rafting Company</h2>
+            <p>123 Main River Street<br>Kolob, California</p>
+            <p>Phone: +1 999 999 9999</p>
+            <p>Email: info@whitewater.com</p>
+            <iframe src="https://www.google.com/maps/embed?pb=..." allowfullscreen="" loading="lazy"></iframe>
+        </section>
 
-    <!-- Contact Form -->
-    <section class="contact-form">
-      <h2>Get in Touch!</h2>
-      <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <!-- Contact Form -->
+        <section class="contact-form">
+            <h2>Get in Touch!</h2>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
 
-        <p>Purpose:</p>
-        <label><input type="radio" name="purpose" value="general"> General Inquiry</label>
-        <label><input type="radio" name="purpose" value="reservation"> Reservation Question</label>
-        <label><input type="radio" name="purpose" value="suggestion"> Website Suggestion</label>
+                <p>Purpose:</p>
+                <label for="general"><input type="radio" id="general" name="purpose" value="general"> General Inquiry</label>
+                <label for="reservation"><input type="radio" id="reservation" name="purpose" value="reservation"> Reservation Question</label>
+                <label for="suggestion"><input type="radio" id="suggestion" name="purpose" value="suggestion"> Website Suggestion</label>
 
-        <label for="message">Message:</label>
-        <textarea id="message" name="message"></textarea>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message"></textarea>
 
-        <label>
-          <input type="checkbox" name="newsletter"> Please subscribe me to the monthly newsletter
-        </label>
+                <label for="newsletter">
+                    <input type="checkbox" id="newsletter" name="newsletter"> Please subscribe me to the monthly newsletter
+                </label>
 
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
 
-    <!-- Employee Profiles -->
-    <section class="profiles">
-      <h2>We Are Here to Serve You</h2>
-      <figure>
-        <img src="images/employee1.jpg" alt="Guide 1">
-        <figcaption>John Doe – Lead Guide</figcaption>
-      </figure>
-      <figure>
-        <img src="images/employee2.jpg" alt="Guide 2">
-        <figcaption>Jane Smith – Safety Coordinator</figcaption>
-      </figure>
-      <figure>
-        <img src="images/employee3.jpg" alt="Guide 3">
-        <figcaption>Mike Johnson – Trip Planner</figcaption>
-      </figure>
-    </section>
-  </main>
+        <!-- Employee Profiles -->
+        <section class="profiles">
+            <h2>We Are Here to Serve You</h2>
+            <figure>
+                <img src="images/employee1.jpg" alt="Guide 1">
+                <figcaption>John Doe – Lead Guide</figcaption>
+            </figure>
+            <figure>
+                <img src="images/employee2.jpg" alt="Guide 2">
+                <figcaption>Jane Smith – Safety Coordinator</figcaption>
+            </figure>
+            <figure>
+                <img src="images/employee3.jpg" alt="Guide 3">
+                <figcaption>Mike Johnson – Trip Planner</figcaption>
+            </figure>
+        </section>
+    </main>
 
-  <footer>
-    <p>© 2026 Exciting Expeditions | Farai Rwambiwa</p>
-    <nav class="socialmedia">
-      <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
-      <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
-    </nav>
-  </footer>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2026 Exciting Expeditions | Farai Rwambiwa</p>
+        <nav class="socialmedia">
+            <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook Icon"></a>
+            <a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn Icon"></a>
+            <a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram Icon"></a>
+        </nav>
+    </footer>
 </body>
 </html>
