--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,10 +28,10 @@
         <div class="hero">
             <img src="images/hero.jpg" alt="Rafting Adventure">
             <h1>Exciting Expeditions</h1>
-            <article>
+            <div>
                 <img src="images/happy-client.jpg" alt="Happy Client">
                 <p>We love seeing our clients smile after an unforgettable rafting adventure!</p>
-            </article>
+            </div>
         </div>
 
         <!-- History Section -->
