--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -27,10 +27,10 @@
         <h1>Our Rafting Adventures</h1>
 
         <!-- Call to Action -->
-        <section class="cta-trips">
+        <div class="cta-trips">
             <p>Ready to book your adventure? Get in touch with us today!</p>
             <a href="contact.html" class="cta-button">Contact Us Now</a>
-        </section>
+        </div>
 
         <!-- Trip Details Section -->
         <section class="trip-details">
